# agent_self_heal_file

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
infra/: ecr.tf  ecs.tf  iam.tf  messaging.tf  outputs.tf  variables.tf  versions.tf
src/audio_repair/: cli.py  service.py
src/audio_repair/core/: classify.py  config.py  ffmpeg_tools.py  messaging.py  models.py  s3.py  sandbox.py  taxonomy.py  telemetry.py
src/audio_repair/eval/: corruptors.py  harness.py  metrics.py  report.py
src/audio_repair/intake/: probe.py  router.py  service.py  validate.py
src/audio_repair/llm/: client.py
src/audio_repair/repair/: agent.py  fastpath.py  tools.py  verify.py  worker.py
tests/: test_cli.py  test_service_runner.py  test_smoke.py
tests/core/: test_classify.py  test_config.py  test_ffmpeg_tools.py  test_messaging.py  test_models.py  test_s3.py  test_sandbox.py  test_taxonomy.py  test_telemetry.py
tests/eval/: test_corruptors.py  test_harness.py  test_metrics.py
tests/intake/: test_router.py  test_service.py  test_validate.py
tests/llm/: test_client.py
tests/repair/: test_agent.py  test_fastpath.py  test_tools.py  test_verify.py  test_worker.py
