[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "audio-repair"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.6",
    "openai>=1.30",
    "boto3>=1.34",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=4.1", "moto[s3,sns,sqs]>=5.0"]

[project.scripts]
audio-repair = "audio_repair.cli:main_cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "integration: tests that require a live LLM backend (set RUN_LLM_INTEGRATION=1)",
]
